--- a/compose.yml
+++ b/compose.yml
@@ -1,13 +1,13 @@
-version: "3.7"
-
+version: '3.9'
 services:
-  web:
-    image: webdevops/php-apache:alpine-php7
+  apache:
+    image: httpd:latest
+    container_name: my-apache-app
     ports:
-      - "4500:80"
+    - '80:80'
     volumes:
-      - /data/php/:/app
-
+    - ./website:/usr/local/apache2/htdocs
+    
     networks:
       - minha-rede
 
